Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17977

Crash when opening a project with classview open

XMLWordPrintable

      Reproduce

      1. Open a "Class View" in a side bar
      2. Load a (Qmake) based projecr
      #  4  Id: 235c.2678 Suspend: 1 Teb: 004f9000 Unfrozen "QThread"
      ChildEBP RetAddr  
      0d83d084 64a2b8dc Qt5Guid!QIcon::isNull(void)+0xc [c:\users\alportal\dev\qt5\qtbase\src\gui\image\qicon.cpp @ 981]
      0d83d09c 62269fcc ProjectExplorerd4!ProjectExplorer::FolderNode::icon(void)+0x1c [c:\users\alportal\dev\qt-creator\src\plugins\projectexplorer\projectnodes.cpp @ 406]
      0d83d178 62269c99 ClassViewd4!ClassView::Internal::Parser::parse(void)+0x24c [c:\users\alportal\dev\qt-creator\src\plugins\classview\classviewparser.cpp @ 301]
      0d83d1c0 622689cf ClassViewd4!ClassView::Internal::Parser::emitCurrentTree(void)+0x59 [c:\users\alportal\dev\qt-creator\src\plugins\classview\classviewparser.cpp @ 694]
      0d83d1cc 62263efa ClassViewd4!ClassView::Internal::Parser::requestCurrentState(void)+0xf [c:\users\alportal\dev\qt-creator\src\plugins\classview\classviewparser.cpp @ 682]
      0d83d1d8 62261ca4 ClassViewd4!QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,void (<function> * f = 0x622689c0, class ClassView::Internal::Parser * o = 0x0cad7b0c, void ** arg = 0x12102ff8)+0xa [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 136]
      0d83d1ec 622649be ClassViewd4!QtPrivate::FunctionPointer<void (<function> * f = 0x622689c0, class ClassView::Internal::Parser * o = 0x0cad7b0c, void ** arg = 0x12102ff8)+0x14 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 169]
      0d83d214 67a7e50f ClassViewd4!QtPrivate::QSlotObject<void (int which = 0n1, class QtPrivate::QSlotObjectBase * this_ = 0x0cad8a28, class QObject * r = 0x0cad7b0c, void ** a = 0x12102ff8, bool * ret = 0x00000000)+0x5e [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject_impl.h @ 120]
      0d83d234 67a78037 Qt5Cored!QtPrivate::QSlotObjectBase::call(class QObject * r = 0x0cad7b0c, void ** a = 0x12102ff8)+0x1f [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject_impl.h @ 101]
      0d83d24c 67a72676 Qt5Cored!QMetaCallEvent::placeMetaCall(class QObject * object = 0x0cad7b0c)+0x27 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 501]
      0d83d304 68a5a74b Qt5Cored!QObject::event(class QEvent * e = 0x0a9449c0)+0xd6 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 1247]
      0d83d324 68a569fd Qt5Widgetsd!QApplicationPrivate::notify_helper(class QObject * receiver = 0x0cad7b0c, class QEvent * e = 0x0a9449c0)+0x12b [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qapplication.cpp @ 3713]
      0d83d9c4 67a2a21c Qt5Widgetsd!QApplication::notify(class QObject * receiver = 0x0cad7b0c, class QEvent * e = 0x0a9449c0)+0x39d [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qapplication.cpp @ 3085]
      0d83da04 67a32f49 Qt5Cored!QCoreApplication::notifyInternal2(class QObject * receiver = 0x0cad7b0c, class QEvent * event = 0x0a9449c0)+0xec [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1013]
      0d83da14 67a2b54c Qt5Cored!QCoreApplication::sendEvent(class QObject * receiver = 0x0cad7b0c, class QEvent * event = 0x0a9449c0)+0x29 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qcoreapplication.h @ 231]
      0d83daa4 67ac3bb4 Qt5Cored!QCoreApplicationPrivate::sendPostedEvents(class QObject * receiver = 0x00000000, int event_type = 0n0, class QThreadData * data = 0x0cad82b8)+0x34c [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1673]
      0d83dac0 67ac1f36 Qt5Cored!QEventDispatcherWin32::sendPostedEvents(void)+0x24 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qeventdispatcher_win.cpp @ 1037]
      0d83db74 77c1d2b3 Qt5Cored!qt_internal_proc(struct HWND__ * hwnd = 0x000c0488 0+0+129x36 'QEventDispatcherWin32_Internal_Widget1735509692', unsigned int message = 0x401, unsigned int wp = 0, long lp = 0n0)+0x3e6 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qeventdispatcher_win.cpp @ 218]
      WARNING: Stack unwind information not available. Following frames may be wrong.
      0d83dba0 77bfe88a USER32!SetManipulationInputTarget+0x53
      0d83dc88 77bfe1e4 USER32!DispatchMessageW+0x8fa
      0d83dcfc 77bfdfa0 USER32!DispatchMessageW+0x254
      0d83dd08 67ac28b6 USER32!DispatchMessageW+0x10
      0d83fb18 67a25b3c Qt5Cored!QEventDispatcherWin32::processEvents(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x646 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qeventdispatcher_win.cpp @ 606]
      0d83fb30 67a25d47 Qt5Cored!QEventLoop::processEvents(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x4c [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qeventloop.cpp @ 135]
      0d83fb94 677adccd Qt5Cored!QEventLoop::exec(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x157 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qeventloop.cpp @ 212]
      0d83fbd4 677adc0f Qt5Cored!QThread::exec(void)+0xad [c:\users\alportal\dev\qt5\qtbase\src\corelib\thread\qthread.cpp @ 515]
      0d83fbe0 677b7e06 Qt5Cored!QThread::run(void)+0xf [c:\users\alportal\dev\qt5\qtbase\src\corelib\thread\qthread.cpp @ 583]
      0d83fc24 752962c4 Qt5Cored!QThreadPrivate::start(void * arg = 0x0cad7b18)+0x176 [c:\users\alportal\dev\qt5\qtbase\src\corelib\thread\qthread_win.cpp @ 380]
      0d83fc38 77dd0fd9 KERNEL32!BaseThreadInitThunk+0x24
      0d83fc80 77dd0fa4 ntdll_77d70000!RtlSubscribeWnfStateChangeNotification+0x439
      0d83fc90 00000000 ntdll_77d70000!RtlSubscribeWnfStateChangeNotification+0x404
      

        For Gerrit Dashboard: QTCREATORBUG-17977
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes